...
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="0dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_run_lottery"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="#2D2D2D"
...
                    android:textSize="11sp"
                    app:cornerRadius="8dp"
                    android:gravity="center"
                    app:iconPadding="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pick_replacements"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="#2D2D2D"
...
